--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <version>4.13</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.javadocmd/simplelatlng -->
+        <dependency>
+            <groupId>com.javadocmd</groupId>
+            <artifactId>simplelatlng</artifactId>
+            <version>1.3.1</version>
+        </dependency>
 
     </dependencies>
     <build>
